# webapp-buildings

./: .env.example  .gitignore  bun.lockb  drizzle.config.ts  package.json  start-database.sh  tailwind.config.ts
bot/: .env  pyproject.toml
bot/src/: main.py
src/: env.js  loading.tsx  not-found.tsx  shared.ts
src/app/: layout.tsx  page.tsx
src/app/api/telegram/: route.ts
src/app/regions/: create.tsx  page.tsx
src/app/regions/[id]/: create_address.tsx  delete_address.tsx  download.tsx  page.tsx
src/app/users/: page.tsx  update_role.tsx
src/components/: backButton.tsx  sdkProvider.tsx  unautharized.tsx  userProvider.tsx
src/components/ui/: alert-dialog.tsx  toast.tsx
src/hooks/: useUser.tsx
src/server/api/: root.ts  trpc.ts
src/server/db/: schema.ts
src/styles/: globals.css
src/trpc/: react.tsx
website/: .air.toml  Dockerfile  docker-compose.yml  go.mod  go.sum  main.go  rename.sh  server.go  tailwind.config.js  tmp.txt
website/config/: config.go
website/errors/: database_errors.go
website/handlers/user/: index.go
website/middleware/: auth.go  cache_control.go
website/models/: adress.go  region.go  user.go
website/static/: style.css
website/static/javascript/: response-targets.js  utils.js
website/storage/: storage.go
website/templates/: base.templ
website/templates/components/: admin_checkbox.templ  modal.templ  navbar_button.templ
website/templates/scripts/: intersection_observer.templ
website/templates/user/: index.templ  login.templ  navbar.templ  user_base.templ
website/utils/: ctx.go  images.go
(+10 files in other folders)
