[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Denis Smirnov <w1png@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
asyncpg = "^0.29.0"
aiohttp = "^3.9.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
